...
    <string name="confirm">Confirm</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="decline">Decline</string>
    <string name="select_all">Select All</string>
    <string name="invert_selection">Invert Selection</string>
    <string name="export">Export</string>
    <string name="undo">Undo</string>
    <string name="processing">Processing…</string>
    <string name="manual_download">Manual</string>
    <string name="follow_system">Follow System</string>
    <string name="exit">Exit</string>
    <string name="disabled">Disabled</string>
...
    <string name="settings_trad_conversion_desc">Convert content from Simplified to Traditional Chinese</string>
    <string name="settings_continous_scrolling">Continuous Scrolling</string>
    <string name="settings_continous_scrolling_desc">Seamlessly transition between chapters when scrolling</string>

    <!-- UI -->
    <string name="detail_introduction">Introduction</string>
    <string name="detail_contents">Contents</string>
    <string name="detail_title">Detail</string>
    <string name="detail_info_stats_count_content">Total %1$d volumes, %2$d chapters</string>
    <string name="local_book_info_title">Book Cache Details</string>
    <string name="local_book_info_book_information">Book information</string>
    <string name="local_book_info_volume_index">Volume index</string>
    <string name="local_book_info_chapter_information">Chapter information</string>
...
    <string name="changelog">Changelog</string>
    <string name="recent_reads">Recent Reads (%d)</string>
    <string name="search_no_results">No Results Found</string>
    <string name="search_no_results_desc">Check your spelling or try a different keyword in Chinese.</string>
    <string name="search_results_title">Search Results for "%1$s" (%2$d%3$s)</string>
    <string name="search_history">Search History</string>
    <string name="start_reading">Start Reading</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="resume_last_reading">Resume Last Reading</string>
    <string name="last_read">Last Read</string>
    <string name="last_read_info">Last Read | %s</string>
    <string name="book_completed">Completed</string>
    <string name="book_ongoing">Ongoing</string>
...
    <string name="bookshelf_sort_reverse">Reverse</string>
    <string name="bookshelf_adjust_order">Adjust Order</string>
    <string name="bookshelf_adjust_bookshelf_order">Adjust Bookshelf Order</string>
    <string name="bookshelf_adjust_order_locked">Locked by current sort</string>
    <string name="bookshelf_book_count">Total: %d Books</string>
    <string name="share_bookshelf">Share Bookshelf</string>
    <string name="add_to_bookshelf">Favorite</string>
    <string name="action_cache">Cache</string>
    <string name="action_show_info">Info</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="info_reading_finished">Finished Reading</string>
    <string name="info_reading_progress">Read %1$d of %2$d</string>
    <string name="info_volume_chapters_count">%d Chapters</string>
    <string name="bookshelf_group_title_updated">Updated (%s)</string>
...
    <string name="detail_info_title">Title</string>
    <string name="detail_info_id">ID</string>
    <string name="detail_info_author">Author</string>
    <string name="detail_info_publishing_house">Publisher</string>
    <string name="detail_info_updated_on">Updated on</string>
    <string name="detail_info_tags">Tags</string>
    <string name="detail_info_stats">Stats</string>
    <string name="view_daily">Daily</string>
    <string name="view_weekly">Weekly</string>
    <string name="view_monthly">Monthly</string>
    <string name="view_yearly">Yearly</string>
    <string name="activity">Activity</string>
    <string name="calendar">Calendar</string>
...
    <string name="last_seen">Last - %s</string>
    <string name="no_records">No Records</string>
    <string name="total_record">Total Record</string>
    <string name="reading_sessions">Reading Sessions</string>
    <string name="reading_duration">Reading Duration</string>
    <string name="reading_duration_unit">h %d min</string>
    <string name="cached">Downloaded</string>
    <string name="cached_false">Download</string>
    <string name="others">Others</string>
    <string name="unit_hour_clock">h</string>
    <string name="unit_hours">h&#160;</string>
    <string name="unit_minutes">m&#160;</string>
    <string name="unit_seconds">s</string>
    <string name="detail_of_date">Reading time of %1$s</string>
...
